# leo

./: .env.template  README.md  pyproject.toml
assets/: SRS_High_Level_Overview.md
src/leoroar/: crew.py  main.py
src/leoroar/config/: agents.yaml  tasks.yaml
src/leoroar/config/analysis_crew/: agents.yaml  tasks.yaml
src/leoroar/config/report_crew/: agents.yaml  tasks.yaml
src/leoroar/config/research_crew/: agents.yaml  tasks.yaml
src/leoroar/config/srs_crew/: agents.yaml  tasks.yaml
src/leoroar/flows/: flow.py  srs.py
src/leoroar/front_end/: poc.py
src/leoroar/models/srs/: requirements.py
src/leoroar/tools/: custom_tool.py  write_tool.py
tests/: load_test.py  modal_test.py  telegram.py
